Import fancybrowser example
Change-Id: Ia61fbe3ef6b76c7530d10d4a3305d4208b3469ef

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ moc_*.cpp
 .rcc
 *nanobrowser
 examples/widgets/browser/browser
+examples/widgets/fancybrowser/fancybrowser
 tests/widgets/qwebenginehistoryinterface/tst_qwebenginehistoryinterface
 tests/widgets/qwebenginehistory/tst_qwebenginehistory
 tests/widgets/qwebengineinspector/tst_qwebengineinspector
